added to container for search results to save

--- a/apiProject.html
+++ b/apiProject.html
@@ -22,12 +22,12 @@
             <h1 id="h1Title"></h1>
             <input type="text" id="city-input" class="form-control"/>      
             <button id="search-btn" class="btn btn-primary">Search</button>
-        </div>  
+        </div>
+        <div id="parent" ></div>  
     </section>
 
     <!-- //Weather Results Display -->
-    <section id="first">
-      
+    <section id="first">   
     </section>
 
     <script src="apiProjectjs.js"></script>
