--- a/index.html
+++ b/index.html
@@ -1,27 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Weather API Project</title>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="apiCss.css">
-    <script src="https://kit.fontawesome.com/615d8365a7.js" crossorigin="anonymous"></script>
-    </head>
 
-  <body><nav class="navbar navbar-dark bg-dark fixed-top">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Weather API Project</title>
+  <!-- <link rel="stylesheet" href="style.css" /> -->
+
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="apiCss.css">
+  <script src="https://kit.fontawesome.com/615d8365a7.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <nav class="navbar navbar-dark bg-dark fixed-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">Courtney's Weather Dashboard</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar"
+        aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+      <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar"
+        aria-labelledby="offcanvasDarkNavbarLabel">
         <div class="offcanvas-header">
           <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
-          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
+            aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
           <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
@@ -32,7 +37,8 @@
               <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
                 Dropdown
               </a>
               <ul class="dropdown-menu dropdown-menu-dark">
@@ -53,50 +59,40 @@
       </div>
     </div>
   </nav>
-    <header>
-        <h1>Weather API Project</h1>
-    </header>
-
-    <!-- //Form Input -->
-    <section>
-        <div id="main-ctnr" >
-            <h1 id="h1Title"></h1>
-            <input type="text" id="city-input" class="form-control"/>      
-            <button id="search-btn" class="btn btn-primary">Search</button>
+  <header>
+    <h1>Weather API Project</h1>
+  </header>
+  <main class="container-fluid">
+    <div class="row">
+      <!-- //Form Input -->
+      <section class="col-2">
+        <div id="main-ctnr">
+          <h1 id="h1Title"></h1>
+          <input type="text" id="city-input" class="form-control" />
+          <button id="search-btn" class="btn btn-primary">Search</button>
         </div>
-        <div id="parent" ></div>  
-    </section>
+        <div id="parent"></div>
+        <!-- UL for Saved Cities -->
+        <section class="box-city">
+          <ul id="searched-cities-list"></ul>
+        </section>
+      </section>
 
-    <!-- //Weather Results Display -->
-    <!-- Weather Results Display -->
-<section id="first">
-  <div class="d-flex mb-3">
-    <div class="p-2">
-      <h3>Date 1</h3>
-      <p></p>
-      <p></p>
-      <p></p>
+      <div class="col-10">
+        <div class="container">
+          <div class="row">
+            <div class="col">Daily Results</div>
+          </div>
+
+          <!-- Weather Results Display -->
+          <section id="first" class="row">
+
+          </section>
+
+        </div>
+
+      </div>
     </div>
-    <div class="p-2">
-      <h3>Date 2</h3>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-    <div class="p-2">
-      <h3>Date 3</h3>
-      <p></p>
-      <p></p>
-      <p></p>
-    </div>
-  </div>
-</section>
-
-
-    <!-- UL for Saved Cities -->
-    <section><ul id="searched-cities-list"></ul>  </section> 
-
-    <script src="apiProjectjs.js"></script>
-  </body>
-
- 
+  </main>
+  <script src="apiProjectjs.js"></script>
+</body>
